# Scene-Port-Hider-by-eBPF

./: .gitignore  ANDROID_STUDIO.md  CMakeLists.txt  DEPLOY.md  README.md  build.sh  build_deps_android.sh  customize.sh  hide_scene_port.sh  hideport.conf  hideport_start.sh  module.prop  package.ps1  package.sh  post-fs-data.sh  service.sh  uninstall.sh
.github/workflows/: build-module.yml
cmake/: GenSkeleton.cmake
service.d/: hide_scene_port.sh
src/: hideport.bpf.c  hideport_loader.c  tls_align.S  vmlinux.h.README
tools/: build_for_connected_device.sh  build_from_btf.sh
